# rust-ssr

./: Cargo.toml  Makefile  README.md
src/: logger.rs  main.rs
src/client/: mod.rs  path.rs
src/client/api/: mod.rs  product_rest_controller.rs
src/client/web_app/: mod.rs
src/client/web_app/atom/: basic_element.rs  mod.rs
src/client/web_app/helper/: helper.rs  macro_web_app.rs  mod.rs
src/client/web_app/organism/: menu.css  menu.rs  mod.rs  page_templace.css  page_template.rs
src/client/web_app/page/: mod.rs
src/client/web_app/page/page1/: dialog_add_product.css  dialog_add_product.js  dialog_add_product.rs  mod.rs  page_1.js  page_1.rs
src/client/web_app/page/page2/: mod.rs  page_2.rs
src/client/web_app/style/: global.css  global.rs
src/domain/: mod.rs  product.rs  product_repository.rs
src/infrastructure/: mod.rs  product_repository_adapter_in_memory.rs
src/usecases/: add_product_to_store.rs  get_all_products.rs  mod.rs
