[package]
name = "ssr_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
dioxus = "0.5.0"
dioxus-ssr = "0.5.0"
tokio = { version = "1.37.0", features = ["full"] }
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
minify-js = "0.6.0"
log = "0.4.20"
uuid = { version = "1.8.0", features = ["v4"] }
tower-http = {  version = "0.5.2", features = ["cors"] }
